# eds-calendar-sync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CALENDAR_KNOWLEDGE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  debug-calendar.py  eds-calendar-sync.conf.example  eds-calendar-sync.py  list-calendars.py  poetry.toml  pyproject.toml
src/eds_calendar_sync/: cli.py  db.py  debug.py  eds_client.py  models.py  preflight.py  sanitizer.py  verify.py
src/eds_calendar_sync/sync/: __init__.py  refresh.py  to_personal.py  to_work.py  two_way.py  utils.py
systemd/: eds-calendar-sync.service  eds-calendar-sync.timer
tests/: conftest.py  fake_client.py  test_exception_reschedule.py  test_sanitizer.py  test_state_db.py  test_sync_ordering.py  test_sync_pair.py  test_utils.py
