[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eds-calendar-sync"
version = "0.1.0"
description = "Bidirectional calendar sync between work and personal calendars via EDS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "PyGObject",
]

[project.scripts]
eds-calendar-sync = "eds_calendar_sync.cli:main"
debug-calendar    = "eds_calendar_sync.debug:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eds_calendar_sync"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
