[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eds-calendar-sync"
version = "0.1.0"
description = "Bidirectional calendar sync between work and personal calendars via EDS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "PyGObject",
    "typer[all]",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[project.scripts]
eds-calendar-sync = "eds_calendar_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eds_calendar_sync"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports (no relative imports)
]
ignore = [
    "B008", # do not perform function calls in default arguments (typer pattern)
    "E402", # module level import not at top of file (gi.require_version() pattern)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["eds_calendar_sync"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
